--- a/src/.env.sample
+++ b/src/.env.sample
@@ -1,5 +1,9 @@
 PORT = 
+PERSISTENCE = 
 MONGO_URL = 
+DB_NAME = 
 SECRET =
-clientID = 
-clientSecret = 
+CLIENT_ID_GITHUB = 
+CLEINT_SECRET_GITHUB = 
+PASSWORD_GMAIL_NODEMAILER =
+USER_GMAIL_NODEMAILER = 
