--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-compression": "^1.0.2",
     "express-handlebars": "^7.1.3",
     "express-session": "^1.18.0",
     "mongoose": "^8.4.4",
@@ -29,6 +30,7 @@
     "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
     "pm2": "^5.4.1",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "winston": "^3.13.1"
   }
 }
