--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "passport-local": "^1.0.0",
     "pm2": "^5.4.1",
     "socket.io": "^4.7.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.13.1"
   }
 }
