--- a/src/.env.sample
+++ b/src/.env.sample
@@ -8,3 +8,7 @@ CLIENT_SECRET_GITHUB=
 PASSWORD_GMAIL_NODEMAILER=
 USER_GMAIL_NODEMAILER=
 MODE= 
+EMAIL_ADMIN=
+PASSWORD_ADMIN=
+EMAIL_PREMIUM=
+PASSWORD_PREMIUM=
