--- a/src/docs/carts.yaml
+++ b/src/docs/carts.yaml
@@ -1,133 +1,158 @@
 paths:
-  /api/carts:
+  /api/products:
     get:
-      summary: Get all carts
+      summary: Obtener todos los productos
       tags:
-        - Carts
-      description: Retrieves a list of all available carts.
+        - Products
+      description: Obtiene una lista de todos los productos.
       responses:
         "200":
-          description: A list of carts
-        "404":
-          description: Carts not found
+          description: Lista de productos obtenida exitosamente
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Product"
         "500":
-          description: Internal server error
-
+          description: Error interno del servidor
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
     post:
-      summary: Create a new cart
+      summary: Crear un nuevo producto
       tags:
-        - Carts
-      description: Creates a new cart.
+        - Products
+      description: Crea un nuevo producto.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Product"
+        required: true
       responses:
-        "201":
-          description: Cart created successfully
+        "200":
+          description: Producto creado exitosamente
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  payload:
+                    type: string
         "500":
-          description: Internal server error
-
-  /api/carts/{cid}:
+          description: Error interno del servidor
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+  /api/products/{pid}:
     get:
-      summary: Get cart by ID
+      summary: Obtener un producto por ID
       tags:
-        - Carts
-      description: Retrieves a specific cart by its ID.
+        - Products
+      description: Obtiene un producto específico basado en el ID proporcionado.
+      parameters:
+        - in: path
+          name: pid
+          required: true
+          description: ID del producto
+          schema:
+            type: string
       responses:
         "200":
-          description: Cart found
+          description: Producto encontrado
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Product"
         "400":
-          description: Enter a valid Mongo ID
+          description: Solicitud incorrecta
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
         "404":
-          description: Cart not found
+          description: Producto no encontrado
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
         "500":
-          description: Internal server error
-
+          description: Error interno del servidor
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
     put:
-      summary: Update all products in cart
+      summary: Actualizar un producto
       tags:
-        - Carts
-      description: Updates all products in a specific cart.
+        - Products
+      description: Actualiza un producto existente.
+      parameters:
+        - in: path
+          name: pid
+          required: true
+          description: ID del producto
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Product"
+        required: true
       responses:
         "200":
-          description: All products updated in cart successfully
+          description: Producto actualizado exitosamente
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Product"
         "400":
-          description: Invalid cart data
-        "404":
-          description: Cart not found
+          description: Solicitud incorrecta
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
         "500":
-          description: Internal server error
-
+          description: Error interno del servidor
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
     delete:
-      summary: Delete all products from cart
+      summary: Eliminar un producto
       tags:
-        - Carts
-      description: Deletes all products from a specific cart.
-      responses:
-        "204":
-          description: All products deleted from cart successfully
-        "404":
-          description: Cart not found
-        "500":
-          description: Internal server error
-
-  /api/carts/{cid}/product/{pid}:
-    post:
-      summary: Add product to cart
-      tags:
-        - Carts
-      description: Adds a product to a specific cart.
-      responses:
-        "201":
-          description: Product added to cart successfully
-        "400":
-          description: Invalid product data or invalid Mongo ID
-        "401":
-          description: Unauthorized
-        "404":
-          description: Cart or product not found
-        "500":
-          description: Internal server error
-
-    delete:
-      summary: Delete product from cart
-      tags:
-        - Carts
-      description: Deletes a product from a specific cart.
-      responses:
-        "204":
-          description: Product deleted from cart successfully
-        "400":
-          description: Invalid Mongo ID or unfilled fields
-        "404":
-          description: Cart or product not found
-        "500":
-          description: Internal server error
-
-    put:
-      summary: Update product in cart
-      tags:
-        - Carts
-      description: Updates a product in a specific cart.
+        - Products
+      description: Elimina un producto existente.
+      parameters:
+        - in: path
+          name: pid
+          required: true
+          description: ID del producto
+          schema:
+            type: string
       responses:
         "200":
-          description: Product updated in cart successfully
+          description: Producto eliminado exitosamente
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  payload:
+                    type: string
         "400":
-          description: Invalid product data or invalid Mongo ID
-        "404":
-          description: Cart or product not found
+          description: Solicitud incorrecta
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
         "500":
-          description: Internal server error
-
-  /api/carts/{cid}/purchase:
-    post:
-      summary: Purchase cart
-      tags:
-        - Carts
-      description: Creates a purchase ticket for a specific cart.
-      responses:
-        "201":
-          description: Purchase ticket created successfully
-        "400":
-          description: Invalid Mongo ID
-        "404":
-          description: Cart not found
-        "500":
-          description: Internal server error
+          description: Error interno del servidor
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
